--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/yandex-metrika": "^1.1.0",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "nuxt-mq": "^2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
